--- a/Expense Tracker.csproj
+++ b/Expense Tracker.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CategoryClassLibrary\CategoryClassLibrary.vbproj" />
+  </ItemGroup>
+
 </Project>
